--- a/project1/css/specstyles.css
+++ b/project1/css/specstyles.css
@@ -11,7 +11,14 @@ main {
 header {
     text-align: right;
     height: 100vh;
-    /*background-image: url("../media/placeholder.png");*/
+}
+
+#logo {
+    position: absolute;
+    width: 800px;
+    left: 600px;
+    top: 0;
+    z-index: -1;
 }
 
 h1 {
@@ -35,7 +42,6 @@ h2{
     font-size: 3rem;
     text-align: center;
     color: #faa836;
-    background-image: url("../media/placeholder.png");
     text-shadow:
         4px 4px 0 black,
         -4px 4px 0 black,
@@ -67,6 +73,7 @@ p {
     font-family: "Merriweather", serif;
     font-weight: 400;
     font-style: normal;
+    line-height: 2rem;
 }
 
 header p {
@@ -75,14 +82,39 @@ header p {
     font-style: normal;
 }
 
+footer {
+    display: flex;
+    justify-content: space-around;
+}
+
+footer p {
+    flex: 1;
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
+
+footer p#link {
+    text-align: right;
+}
+
+#header_image {
+    width: 450px;
+    height: 300px;
+    border: solid 2px black;
+    border-radius: 10px;
+}
+
 .rating {
     display: flex;
     justify-content: space-around;
     width: 350px;
+    height: 150px;
     position: absolute;
     right: 20px;
     text-align: center;
     border: solid 2px black;
+    background-color: white;
 }
 
 .rating p {
@@ -108,12 +140,13 @@ header p {
 
 .image_list {
     display: flex;
-    justify-content: left;
+    justify-content: space-between;
 }
 
 .container img {
     flex: 1;
     width: 200px;
+    height: 200px;
     border: solid 2px black;
     border-radius: 10px;
     margin-right: 5px;
@@ -137,7 +170,6 @@ header p {
     grid-area: side;
     img {
         padding: 5%;
-        width: 90%;
         height: 500px;
     }
 }
