--- a/gif-finder/styles/main.css
+++ b/gif-finder/styles/main.css
@@ -9,7 +9,7 @@
  
  header h1{
      margin:0;
-     color:blue;
+     color:black;
      text-align:center;
      font-size:100px;
      padding-top: 35px;
@@ -19,27 +19,48 @@
      font-style: italic;
      height:32px;
  }
- 
- .result {
+
+#wrapper {
+    margin: 5px auto;
+    width: 48%;
+    box-shadow : 0 1px 4px rgba(0,0,0,.6);
+    border-radius: 10px;
+    padding: 5px;
+}
+
+.result {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
     position: relative;
-    height: 175px;
-    width: 100px;
+    height: 225px;
+    width: 150px;
     float:left;
-    border:1px solid gray;
-    padding:5px;
-    margin-left:10px;
-    margin-bottom:10px;
+    object-fit: contain;
+    border-radius: 10px;
+    padding: 5px;
+    margin: 10px;
+    box-shadow : 0 1px 4px rgba(0,0,0,.6);
+    transition: 0.2s;
+}
+
+.result:hover {
+    box-shadow : 0 3px 8px rgba(0,0,0,.8);
 }
 
 .result img {
-    position: absolute;
-    left: 5px;
-    bottom: 5px;
-    display:block;
-    
+    position: relative;
+    width: 100%;
+    height: auto;
+    display: block;
 }
 
 .result span{
+    background-color: white;
+    border-radius: 10px;
+    padding: 5px;
+    position: absolute;
+    bottom: 5px;
+    left: 5px;
     font-size:12px;
     font-weight:bold;
     display:block;
@@ -50,7 +71,10 @@
 }
 
 button{
-  display : inline-block;
+width: 300px;
+height: 100px;
+
+  float: right;
   cursor : pointer;
 
   border-style : solid;
@@ -58,7 +82,7 @@ button{
   border-radius : 50px;
   padding : 10px 18px;
   box-shadow : 0 1px 4px rgba(0,0,0,.6);
-  font-size : 9.5pt;
+  font-size : 12pt;
   font-weight : bold;
   color : #fff;
   text-shadow : 0 1px 3px rgba(0,0,0,.4);
