--- a/project2/css/main.css
+++ b/project2/css/main.css
@@ -22,16 +22,22 @@ header {
 #mainContent {
     display: grid;
     grid-template-areas:
-    "search results";
-    grid-template-columns: 1fr 4fr;
+    "search"
+    "results";
+    grid-template-columns: 1fr;
+}
+
+@media screen and (min-width: 850px) {
+    #mainContent {
+        display: grid;
+        grid-template-areas:
+        "search results";
+        grid-template-columns: 1fr 4fr;
+    }
 }
 
 #search {
     grid-area: search;
-
-    height: 300px;
-    position: sticky;
-    top: 0px;
 
     display: flex;
     flex-direction: column;
@@ -39,11 +45,70 @@ header {
     justify-content: flex-start;
 }
 
-.searchItem{
+.searchItem {
     width: 100%;
     height: 100px;
     background-color: #f2f2f2;
     border-bottom: solid 2px lightgray;
+}
+
+.searchTextbox {
+    display: flex;
+    align-items: center;
+    width: 80%;
+    height: 50px;
+    margin: 15px auto;
+    
+    padding: 10px;
+    background-color: lightgray;
+
+    border: 2px solid transparent;
+    border-radius: 12px;
+}
+
+.searchTextbox:focus-within {
+    border: 2px solid white;
+}
+
+.searchTextbox input {
+    width: 100%;
+    height: 100%;
+
+    outline: none;
+    border: none;
+    background: transparent;
+}
+
+.searchTextbox button {
+    width: 30px;
+    height: 100%;
+    color: white;
+    cursor: pointer;
+
+    outline: none;
+    border: none;
+    background: transparent;
+}
+
+.searchDropdown {
+    width: 80%;
+    height: 50px;
+    margin: 15px auto;
+    
+    padding: 10px;
+    background-color: lightgray;
+
+    border: 2px solid transparent;
+    border-radius: 12px;
+}
+
+.searchDropdown select {
+    outline: none;
+    border: none;
+    background-color: white;
+    width: 100%;
+    height: 30px;
+    margin: 5px 0;
 }
 
 #results {
