--- a/project2/css/main.css
+++ b/project2/css/main.css
@@ -102,6 +102,10 @@ header {
     border-radius: 12px;
 }
 
+.searchDropdown:focus-within {
+    border: 2px solid white;
+}
+
 .searchDropdown select {
     outline: none;
     border: none;
