--- a/project2/css/main.css
+++ b/project2/css/main.css
@@ -1,10 +1,42 @@
+:root {
+    --background-color:#171d25;
+    --background-gradient: linear-gradient(180deg, rgba(33,62,90,1) 0%, rgba(23,29,37,1) 75%);
+    --neutral-color:#1b2838;
+    --neutral-gradient: linear-gradient(180deg, rgba(33,77,120,1) 0%, rgba(27,40,56,1) 50%);
+    --secondary-color:#394960;
+    --primary-color:#7a8b9d;
+    --accent-color:#c5c3c0;
+}
+
 * {
-    font-family: 'Outfit';
+    font-family: "Inter", sans-serif;
+}
+
+a:link {
+    color: var(--accent-color);
+}
+
+a:visited {
+    color: var(--primary-color);
+}
+
+a:focus {
+    color: white;
+}
+
+a:hover {
+    color: white;
+    transition: color 0.2s;
+}
+
+a:active {
+    color: white;
 }
 
 body {
     margin: 0px;
-    background-color: darkgray;
+    background: var(--background-color);
+    background: var(--background-gradient) fixed;
 }
 
 h1 {
@@ -12,7 +44,7 @@ h1 {
     margin-top: 0.67em;
     margin-bottom: 0.67em;
     font-weight: bold;
-    font-family: 'Outfit';
+    font-family: "Inter", sans-serif;
   }
 
 
@@ -22,7 +54,9 @@ h1 {
 }
 
 #headerWrapper {
-    background-color: chartreuse;
+    background: var(--neutral-color);
+    background: var(--neutral-gradient) fixed;
+    color: var(--accent-color);
     padding: 40px 0px;
     text-align: center;
 }
@@ -45,7 +79,9 @@ h1 {
 
 #search {
     grid-area: search;
-    background-color: lightgray;
+    background: var(--neutral-color);
+    background: var(--neutral-gradient) fixed;
+    border-right: 1px solid var(--neutral-color);
 
     display: flex;
     flex-direction: column;
@@ -56,8 +92,8 @@ h1 {
 .searchItem {
     width: 100%;
     height: 100px;
-    background-color: #f2f2f2;
-    border-bottom: solid 2px lightgray;
+    background-color: var(--secondary-color);
+    border-bottom: solid 2px var(--neutral-color);
 }
 
 .searchTextbox {
@@ -68,19 +104,25 @@ h1 {
     margin: 15px auto;
     
     padding: 10px;
-    background-color: lightgray;
+    background-color: var(--neutral-color);
 
-    border: 2px solid transparent;
+    border: 1px solid transparent;
     border-radius: 12px;
 }
 
+::placeholder {
+    color: var(--primary-color);
+}
+
 .searchTextbox:focus-within {
-    border: 2px solid white;
+    border: 1px solid var(--primary-color);
+    transition: border 0.4s;
 }
 
 .searchTextbox input {
     width: 100%;
     height: 100%;
+    color: var(--accent-color);
 
     outline: none;
     border: none;
@@ -90,12 +132,12 @@ h1 {
 .searchTextbox button {
     width: 30px;
     height: 100%;
-    color: white;
+    color: var(--accent-color);
     cursor: pointer;
 
     outline: none;
     border: none;
-    border-left: solid 2px darkgray;
+    border-left: solid 2px var(--secondary-color);
     padding: 10px;
     background: transparent;
 }
@@ -104,22 +146,26 @@ h1 {
     width: 80%;
     height: 50px;
     margin: 15px auto;
+    color: var(--accent-color);
     
     padding: 10px;
-    background-color: lightgray;
+    background-color: var(--neutral-color);
 
-    border: 2px solid transparent;
+    border: 1px solid transparent;
     border-radius: 12px;
 }
 
 .searchDropdown:focus-within {
-    border: 2px solid white;
+    border: 1px solid var(--primary-color);
+    transition: border 0.4s;
 }
 
 .searchDropdown select {
     outline: none;
     border: none;
-    background-color: white;
+    background-color: var(--neutral-color);
+    border: 1px solid var(--secondary-color);
+    color: var(--primary-color);
     width: 100%;
     height: 30px;
     margin: 5px 0;
@@ -138,6 +184,24 @@ table {
 caption {
     padding: 10px;
     text-align: left;
+    background-color: var(--neutral-color);
+    color: var(--primary-color);
+}
+
+tr {
+    background-color: var(--secondary-color);
+    border-bottom: 1px solid var(--neutral-color);
+    color: var(--accent-color);
+}
+
+tr:hover {
+    background-color: var(--primary-color);
+    border-bottom: 1px solid transparent;
+    color: white;
+    transition: all 0.2s;
+    a {
+        color: white;
+    }
 }
 
 th, td {
@@ -154,7 +218,8 @@ th {
     padding-bottom: 5px;
     width: 120px;
     height: 30px;
-    background-color: lightgray;
+    background-color: var(--neutral-color);
+    color: white;
 }
 
 th#fill {
@@ -199,5 +264,5 @@ th#fill {
     }
 }
 
-tr:nth-child(even){background-color: #f2f2f2}
-tr:nth-child(odd){background-color: white}
+/*tr:nth-child(even){background-color: #f2f2f2}
+tr:nth-child(odd){background-color: white}*/
